<resources>
    <string name="app_name">Asteroid Neo</string>
    <string name="fastest_asteroid">Fastest \nAsteroid</string>
    <string name="closest_asteroid">Closest \nAsteroid</string>
    <string name="average_size_asteroid">Average \nAsteroid</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit">Submit</string>
</resources>