<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_start_date"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/tv_start_date"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_end_date"
        android:layout_below="@+id/ll_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            />

        <TextView
            android:id="@+id/tv_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>


    </LinearLayout>




    <LinearLayout
        android:id="@+id/ll_fastest_asteroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/ll_end_date"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fastest_asteroid"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_fastest_asteroid"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_closest_asteroid"
        android:layout_width="match_parent"
        android:layout_below="@+id/ll_fastest_asteroid"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closest_asteroid"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_closest_asteroid"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_below="@+id/ll_closest_asteroid"
        android:id="@+id/ll_average_size_asteroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_size_asteroid"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_average_size_asteroid"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</RelativeLayout>